kubernetes/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: migration-tracker-postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: migration-tracker-postgres
