kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: migration-tracker-api
  labels:
    app: migration-tracker-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: migration-tracker-api
